Added support for DI with mounted rest resource